<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath /> <!-- lookup parent from repository -->
	</parent>
	<groupId>org.farhan</groupId>
	<artifactId>sheep-dog-asciidoc-api-svc</artifactId>
	<version>1.6-SNAPSHOT</version>
	<name>Sheep Dog AsciiDoc API Service</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>21</java.version>
		<sheep-dog-asciidoc-api.version>1.6</sheep-dog-asciidoc-api.version>
		<docker.registry.github>ghcr.io</docker.registry.github>
		<spring-cloud-contract.version>4.3.0</spring-cloud-contract.version>
		<sheepdog.namespace>dev</sheepdog.namespace>
		<sheepdog.host>${sheepdog.namespace}.sheepdog.io</sheepdog.host>
		<argLine>-XX:+EnableDynamicAgentLoading</argLine>
	</properties>

	<scm>
		<connection>scm:git:https://github.com/farhan5248/sheep-dog-svc</connection>
		<tag>sheep-dog-asciidoc-api-svc-1.26</tag>
	</scm>

	<pluginRepositories>
		<pluginRepository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases><enabled>true</enabled></releases>
			<snapshots><enabled>true</enabled></snapshots>
		</repository>
	</repositories>

	<distributionManagement>
		<repository>
			<id>github</id>
			<url>https://maven.pkg.github.com/farhan5248/sheep-dog-main</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</distributionManagement>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.13.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>io.cucumber</groupId>
				<artifactId>cucumber-bom</artifactId>
				<version>7.23.0</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-dependencies</artifactId>
				<version>${spring-cloud-contract.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-artemis</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<version>4.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>artemis-jakarta-server</artifactId>
			<version>2.41.0</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.datatype</groupId>
			<artifactId>jackson-datatype-jsr310</artifactId>
		</dependency>
		<dependency>
			<groupId>org.farhan</groupId>
			<artifactId>sheep-dog-asciidoc-api</artifactId>
			<version>${sheep-dog-asciidoc-api.version}</version>
		</dependency>
		<!-- Cucumber -->
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-java</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-spring</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.cucumber</groupId>
			<artifactId>cucumber-junit-platform-engine</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-suite</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.rest-assured</groupId>
			<artifactId>spring-mock-mvc</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-contract-verifier</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.farhan</groupId>
				<artifactId>sheep-dog-svc-maven-plugin</artifactId>
				<version>1.3</version>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-contract-maven-plugin</artifactId>
				<version>${spring-cloud-contract.version}</version>
				<extensions>true</extensions>
				<configuration>
					<baseClassForTests>org.farhan.runners.surefire.springboot.StubRunnerTestConfig</baseClassForTests>
					<failOnNoContracts>false</failOnNoContracts>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<id>add-test-source</id>
						<phase>initialize</phase>
						<goals>
							<goal>add-test-source</goal>
							<goal>add-test-resource</goal>
						</goals>
						<configuration>
							<sources>
								<source>src-gen/test/java</source>
							</sources>
							<resources>
								<resource>
									<directory>src-gen/test/resources</directory>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>**/ContractVerifierTest.java</exclude>
					</excludes>
					<properties>
						<!-- Work around. Surefire does not include enough
                             information to disambiguate between different
                             examples and scenarios. -->
						<configurationParameters>
							cucumber.junit-platform.naming-strategy=long
						</configurationParameters>
					</properties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.14</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-antrun-plugin</artifactId>
				<version>3.1.0</version>
				<dependencies>
					<dependency>
						<groupId>org.jacoco</groupId>
						<artifactId>org.jacoco.ant</artifactId>
						<version>0.8.14</version>
						<classifier>nodeps</classifier>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>jacoco-report-with-tests</id>
						<phase>verify</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<skip>${skipTests}</skip>
							<target>
								<taskdef name="report" classname="org.jacoco.ant.ReportTask" classpathref="maven.plugin.classpath" />
								<report>
									<executiondata>
										<file file="${project.build.directory}/jacoco.exec" />
									</executiondata>
									<structure name="${project.name}">
										<classfiles>
											<fileset dir="${project.build.directory}/classes" />
											<fileset dir="${project.build.directory}/test-classes" />
										</classfiles>
										<sourcefiles encoding="UTF-8">
											<fileset dir="${project.build.sourceDirectory}" />
											<fileset dir="${project.build.testSourceDirectory}" />
											<fileset dir="${project.basedir}/src-gen/test/java" />
										</sourcefiles>
									</structure>
									<html destdir="${project.build.directory}/site/jacoco-with-tests" />
									<xml destfile="${project.build.directory}/site/jacoco-with-tests/jacoco.xml" />
									<csv destfile="${project.build.directory}/site/jacoco-with-tests/jacoco.csv" />
								</report>
							</target>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
				<configuration>
					<includes>
						<include>org.farhan:*:*</include>
					</includes>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.farhan</groupId>
				<artifactId>sheep-dog-mgmt-maven-plugin</artifactId>
				<version>1.27</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<includes>
						<include>**/*IT</include>
						<include>**/*IntegrationTest</include>
					</includes>
					<systemPropertyVariables>
						<sheepdog.host>${sheepdog.host}</sheepdog.host>
					</systemPropertyVariables>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.1</version>
				<executions>
					<execution>
						<id>unpack</id>
						<phase>package</phase>
						<goals>
							<goal>unpack</goal>
						</goals>
						<configuration>
							<artifactItems>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>jar</type>
									<outputDirectory>${project.build.directory}/dependency</outputDirectory>
									<excludes>**/sheep*.jar</excludes>
								</artifactItem>
								<artifactItem>
									<groupId>${project.groupId}</groupId>
									<artifactId>${project.artifactId}</artifactId>
									<version>${project.version}</version>
									<type>jar</type>
									<outputDirectory>
										${project.build.directory}/dependency-org-farhan</outputDirectory>
									<includes>**/sheep*.jar</includes>
								</artifactItem>
							</artifactItems>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.jkube</groupId>
				<artifactId>kubernetes-maven-plugin</artifactId>
				<version>1.18.0</version>
				<configuration>
					<images>
						<!-- Dependencies image -->
						<image>
							<build>
								<contextDir>${project.basedir}</contextDir>
								<dockerFile>docker/dependencies.dockerfile</dockerFile>
							</build>
							<alias>${docker.registry.github}/${project.artifactId}-dependencies</alias>
							<name>${docker.registry.github}/farhan5248/%a-dependencies:%l</name>
							<registry>${docker.registry.github}</registry>
						</image>
						<!-- Application image -->
						<image>
							<build>
								<contextDir>${project.basedir}</contextDir>
								<dockerFile>docker/springboot.dockerfile</dockerFile>
							</build>
							<alias>${docker.registry.github}/${project.artifactId}</alias>
							<name>${docker.registry.github}/farhan5248/%a:%l</name>
							<registry>${docker.registry.github}</registry>
						</image>
					</images>
				</configuration>
				<executions>
					<execution>
						<id>build-image</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>build</goal>
						</goals>
					</execution>
					<execution>
						<id>push-image</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>push</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>delete-component</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>kubectl</executable>
							<arguments>
								<argument>delete</argument>
								<argument>deployments</argument>
								<argument>-l</argument>
								<argument>component=sheep-dog-asciidoc-api-svc</argument>
								<argument>-n</argument>
								<argument>${sheepdog.namespace}</argument>
							</arguments>
						</configuration>
					</execution>
					<execution>
						<id>start-component</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>exec</goal>
						</goals>
						<configuration>
							<executable>kubectl</executable>
							<arguments>
								<argument>apply</argument>
								<argument>-k</argument>
								<argument>kubernetes/overlays/${sheepdog.namespace}</argument>
							</arguments>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>